# starRailTeamTracker

./: .firebaserc  .gitignore  README.md  deploy.sh  firebase.json  firestore.rules  package-lock.json  runTests.sh  test.sh
.github/workflows/: dev-merge.yml  firebase-hosting-merge-dev.yml  firebase-hosting-merge.yml  firebase-hosting-pull-request-dev.yml  firebase-hosting-pull-request.yml  main-merge.yml
.github/workflows/dev/: firebase-hosting-pull-request.yml
.github/workflows/main/: firebase-hosting-pull-request.yml
StarRailTeam/: package-lock.json  package.json
StarRailTeam/src/: App.css  App.tsx
app/: README.md  angular.json  package-lock.json  package.json  server.ts
app/src/: index.html
docs/: deploy.md
firestoretests/: package-lock.json  package.json  test.js
frontend/: .firebaserc  .gitignore  angular.json  firebase.json  package-lock.json  package.json  server.ts  tsconfig.json
new-user/: index.js  package-lock.json  package.json
newfrontend/: .firebaserc  README.md  angular.json  firebase.json  package-lock.json  package.json  tsconfig.json
newfrontend/src/: ads.txt  index.html  styles.scss
scrapper/: .gitignore  firebaseConsole.py  imageSettings.py  webScrapperV2.py
scrapper/webscrapper_v3/: Cargo.toml
scrapper/webscrapper_v3/src/: character.rs  main.rs
starRailTeam/: .firebaserc  angular.json  firebase.json  package-lock.json  package.json
starRailTeam/src/: index.html  styles.scss
stripefunction/: .gitignore  main.py  package-lock.json  requirements.txt
webscrapper/: imageSettings.py  key.json  webScrapperV2.py
(+132 files in other folders)
