[package]
name = "webscrapper_v3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
either = "1.9.0"
reqwest = { features = ["blocking"] }
scraper = "0.12.0"
regex = "1.5.4"
firestore = "0.37.4"
serde = { version = "1.0.130", features = ["derive"] }
tokio = { version = "1.9.0", features = ["full"] }
image = "0.24.7"
webp = "0.2.6"
